tdf#151417 crash in draw, activating Form controls

regression from
    commit 8611f6e259b807b4f19c8dc0eab86ca648891ce3
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Thu May 27 10:27:46 2021 +0200
    ref-count SdrObject

Change-Id: I1798cead8ed72ad59799c40d0e99f3424f9e382b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141134
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>